# loggs-colletor

./: .env-example  .gitignore  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS
alembic/: env.py
alembic/versions/: 2024_03_25_1928-cbb4c74fef8e_database_creation.py  2024_03_29_0237-7a12ca2df61f_database_creation.py
src/: main.py
src/models/: log_model.py
src/services/: __init__.py
src/services/db/log_db/: PostgreAPI.py  checking_the_database_operation.py  tables.py
src/services/kafka_concumer/: KafkaConcumer.py
src/utils/: config.py  url_pg.py
src/utils/exeptions/: configurate_exceptions.py
