[tool.poetry]
name = "logg-collector"
version = "0.1.0"
description = ""
authors = ["Nikita Shagalov <shagalovprog@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.110.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
